--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,35 @@ nav ul li a:hover {
   height: 100%;
   object-fit: contain;
 }
+.model {
+  width: 500px;
+  height: 500px;
+}
+.content {
+  width: 90%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.main-text {
+  width: 500px;
+}
+.main-text h1 {
+  font-size: 3.5rem;
+  color: #747474;
+}
+.portfolio-btn {
+  width: 190px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  background-color: #1db096;
+  border-radius: 20px;
+  box-shadow: 4px 10px 30px rgba(24, 139, 119, 0.2);
+}
